# page-loader

./: .gitignore  README.md  logging.json  makefile  pyproject.toml  setup.cfg
.github/workflows/: CI.yml  main.yml
page_loader/: __init__.py  cli.py  loader.py  parser.py  runner.py  url.py
page_loader/cli/: __init__.py  cli.py
page_loader/loader/: __init__.py  loader.py  parser.py  runner.py  url.py
page_loader/logger/: __init__.py  exceptions.py  logger_setup.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_cli.py  test_exceptions.py  test_loader.py  test_url.py
tests/fixtures/: expected_result.html  test-com-page.html
tests/loader/: test_loader.py  test_parser.py
