[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI-utilite for downloading web-pages in chosen directory"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
