[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = "CLI-utilite for downloading web-pages in chosen directory"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
wemake-python-styleguide = "^0.16.0"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
